--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://yourusername.github.io/petsitterfinder-frontend/",
+  "homepage":"https://ignaciorossetto.github.io/petsitterfinder-frontend/",
   "name": "pet_sitter_finder",
   "version": "0.1.0",
   "private": true,
