--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://ignaciorossetto.github.io/petsitterfinder-frontend/",
+  "homepage":"https://yourusername.github.io/petsitterfinder-frontend/",
   "name": "pet_sitter_finder",
   "version": "0.1.0",
   "private": true,
@@ -22,9 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
