--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.1",
+    "cors": "^2.8.5",
+    "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +47,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000/api",
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
