--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
-    "sweetalert2": "^11.7.2",
+    "react-scripts": "^2.1.3",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
