--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-hook-form": "^7.43.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.4.8",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
